--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     </head>
     <style>
         
-    input{
-}
+
         label{border-style: outset;}
         body{display:block;margin:8px;background-color: lightgrey;}
         div{width:50%}
@@ -27,7 +26,7 @@ li a:hover{background-color: grey;}
 footer{background-color: black;padding:30px;}
     </style>
 <body>
-    <h1>EKITI STATE UNIVERSITY</h1>
+    <h1>EKITI STATE UNIVERSITY ADO</h1>
     <ul>
        <li class="active"><a href="#hh">Home</a></li>
        <li><a href="#hh">News</a></li>
@@ -53,3 +52,5 @@ footer{background-color: black;padding:30px;}
     </form>
     </div>
     <footer></footer>
+    </body>
+    </html>
